<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/cognito_mqtt_test_start_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/thing_test_basic_txt"
                android:text="@string/thing_test_start_txt"
                android:textSize="40sp"
                android:layout_margin="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/thing_test_test_subcribe_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/thing_test_btn"
                android:text="@string/thing_test_subcribe_btn_txt"
                android:textColor="@color/thing_test_basic_txt"
                android:padding="10dp"
                android:layout_margin="20dp" />

            <Button
                android:id="@+id/thing_test_test_desired_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/thing_test_btn"
                android:text="@string/thing_test_desired_btn_txt"
                android:textColor="@color/thing_test_basic_txt"
                android:padding="10dp"
                android:layout_margin="20dp" />

            <Button
                android:id="@+id/thing_test_test_reported_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/thing_test_btn"
                android:text="@string/thing_test_reported_btn_txt"
                android:textColor="@color/thing_test_basic_txt"
                android:padding="10dp"
                android:layout_margin="20dp" />

            <Button
                android:id="@+id/thing_test_test_read_shadow_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:background="@drawable/thing_test_btn"
                android:text="@string/thing_test_read_shadow_btn_txt"
                android:textColor="@color/thing_test_basic_txt"
                android:padding="10dp"
                android:layout_margin="20dp" />

        </LinearLayout>

    </ScrollView>



</LinearLayout>